--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "vue": "^3.5.24"
   },
   "devDependencies": {
     "@types/node": "^25.0.2",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.23",
     "jsdom": "^27.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.2.4",
     "vitest": "^4.0.15",
