--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,17 @@ jobs:
 
       - name: Run tests
         run: npm test
+      - name: Test Summary
+        if: always()
+        run: |
+          echo "## Tests" >> $GITHUB_STEP_SUMMARY
+          echo "- Framework: Vitest" >> $GITHUB_STEP_SUMMARY
+          echo "- Language: TypeScript" >> $GITHUB_STEP_SUMMARY
+          echo "- Coverage target: Base logic validation" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          tail -n 30 test.log >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
   build:
     needs: test
@@ -51,6 +62,17 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist
+      - name: Build Summary
+        if: always()
+        run: |
+          echo "## Build" >> $GITHUB_STEP_SUMMARY
+          echo "- Bundler: Vite" >> $GITHUB_STEP_SUMMARY
+          echo "- Target: Static GitHub Pages" >> $GITHUB_STEP_SUMMARY
+          echo "- Output: dist/" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          tail -n 20 build.log >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
 
   deploy:
     needs: build
@@ -64,3 +86,10 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+      - name: Deployment Summary
+        if: success()
+        run: |
+          echo "## Deployment" >> $GITHUB_STEP_SUMMARY
+          echo "- Platform: GitHub Pages" >> $GITHUB_STEP_SUMMARY
+          echo "- Branch: main" >> $GITHUB_STEP_SUMMARY
+          echo "- Status: Deployed successfully" >> $GITHUB_STEP_SUMMARY
