--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,15 @@ jobs:
           echo "## Tests" >> $GITHUB_STEP_SUMMARY
           echo "- Framework: Vitest" >> $GITHUB_STEP_SUMMARY
           echo "- Language: TypeScript" >> $GITHUB_STEP_SUMMARY
-          echo "- Coverage target: Base logic validation" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          tail -n 30 test.log >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+
+          FILES=$(grep -E "^ Test Files" test.log | sed 's/^ *//')
+          TESTS=$(grep -E "^      Tests" test.log | sed 's/^ *//')
+          DURATION=$(grep -E "^   Duration" test.log | sed 's/^ *//')
+
+          echo "$FILES" >> $GITHUB_STEP_SUMMARY
+          echo "$TESTS" >> $GITHUB_STEP_SUMMARY
+          echo "$DURATION" >> $GITHUB_STEP_SUMMARY
 
   build:
     needs: test
@@ -69,12 +73,19 @@ jobs:
         run: |
           echo "## Build" >> $GITHUB_STEP_SUMMARY
           echo "- Bundler: Vite" >> $GITHUB_STEP_SUMMARY
-          echo "- Target: Static GitHub Pages" >> $GITHUB_STEP_SUMMARY
+          echo "- Language: TypeScript" >> $GITHUB_STEP_SUMMARY
           echo "- Output: dist/" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          tail -n 20 build.log >> $GITHUB_STEP_SUMMARY
-          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+
+          BUILD_STATUS=$(grep -E "built in" build.log || true)
+          ASSETS=$(grep -E "dist/" build.log | tail -n 5 || true)
+
+          if [ -n "$BUILD_STATUS" ]; then
+            echo "Status: Success" >> $GITHUB_STEP_SUMMARY
+            echo "$BUILD_STATUS" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "Status: Failed" >> $GITHUB_STEP_SUMMARY
+          fi
 
   deploy:
     needs: build
