--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,27 @@ jobs:
           echo "- Language: TypeScript" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
-          FILES=$(grep -E "^ Test Files" test.log | sed 's/^ *//')
-          TESTS=$(grep -E "^      Tests" test.log | sed 's/^ *//')
-          DURATION=$(grep -E "^   Duration" test.log | sed 's/^ *//')
+          TEST_FILES_LINE=$(grep -E "^ Test Files" test.log | sed 's/^ *//')
+          TESTS_LINE=$(grep -E "^      Tests" test.log | sed 's/^ *//')
+          DURATION_LINE=$(grep -E "^   Duration" test.log | sed 's/^ *//')
 
-          echo "$FILES" >> $GITHUB_STEP_SUMMARY
-          echo "$TESTS" >> $GITHUB_STEP_SUMMARY
-          echo "$DURATION" >> $GITHUB_STEP_SUMMARY
+          PASSED_FILES=$(echo "$TEST_FILES_LINE" | grep -oE "[0-9]+ passed" || echo "0 passed")
+          FAILED_FILES=$(echo "$TEST_FILES_LINE" | grep -oE "[0-9]+ failed" || echo "0 failed")
+
+          PASSED_TESTS=$(echo "$TESTS_LINE" | grep -oE "[0-9]+ passed" || echo "0 passed")
+          FAILED_TESTS=$(echo "$TESTS_LINE" | grep -oE "[0-9]+ failed" || echo "0 failed")
+
+          echo "Test Files:" >> $GITHUB_STEP_SUMMARY
+          echo "- Passed: $PASSED_FILES" >> $GITHUB_STEP_SUMMARY
+          echo "- Failed: $FAILED_FILES" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          echo "Tests:" >> $GITHUB_STEP_SUMMARY
+          echo "- Passed: $PASSED_TESTS" >> $GITHUB_STEP_SUMMARY
+          echo "- Failed: $FAILED_TESTS" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          echo "$DURATION_LINE" >> $GITHUB_STEP_SUMMARY
 
   build:
     needs: test
