tests & build run on every PR

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Deploys Vue app to GitHub Pages
 on:
   push:
     branches: [main]
-
+  pull_request:
+    branches: [main]
 permissions:
   contents: write
   pages: write
