--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "vitest run",
     "lint": "eslint 'src/**/*.{js,ts,vue}'",
     "lint:fix": "eslint 'src/**/*.{js,ts,vue}' --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
@@ -27,6 +28,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.6.2",
+    "husky": "^9.1.7",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
