--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,32 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
 
           echo "$DURATION_LINE" >> $GITHUB_STEP_SUMMARY
+      - name: Run Cypress
+        run: |
+          npx cypress run --browser chrome | tee cypress.log
+
+      - name: Cypress Summary
+        if: always()
+        run: |
+          echo "## Cypress E2E Tests" >> $GITHUB_STEP_SUMMARY
+          echo "- Runner: Cypress" >> $GITHUB_STEP_SUMMARY
+          echo "- Browser: Chrome" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          TESTS_PASSED=$(grep -E "Passing" cypress.log | grep -oE "[0-9]+" || echo 0)
+          TESTS_FAILED=$(grep -E "Failing" cypress.log | grep -oE "[0-9]+" || echo 0)
+          TESTS_TOTAL=$((TESTS_PASSED + TESTS_FAILED))
+
+          if [ "$TESTS_FAILED" -eq 0 ]; then
+            echo "Status: ✅ Passed" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "Status: ❌ Failed" >> $GITHUB_STEP_SUMMARY
+          fi
+
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Total: $TESTS_TOTAL" >> $GITHUB_STEP_SUMMARY
+          echo "Passed: $TESTS_PASSED" >> $GITHUB_STEP_SUMMARY
+          echo "Failed: $TESTS_FAILED" >> $GITHUB_STEP_SUMMARY
 
   build:
     needs: test
